fix dark mode on talbe row and remove size option

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -195,16 +195,6 @@
     }
   }
 
-  .shift-pressed {
-    & .highlighted-row {
-      @apply bg-neutral-200!;
-    }
-  }
-
-  .selected-row {
-    @apply bg-neutral-100!;
-  }
-
   .container-large {
     @apply 2xl:container 2xl:mx-auto;
   }
